# student-success-tool

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTEBOOK-FORMAT-TEST.ipynb  README.md  cloudbuild.yaml  compose.yaml  environment.yml  pyproject.toml  pytest.ini  requirements.txt
.devcontainer/: compose.yaml  devcontainer.json  dockerfile  post-create.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  experimental-precommit.yml  inference-integration-deployment.yml  lint.yml  pre-release.yml  publish.yml  style.yml  test.yml  type-check.yml  webapp-and-worker-precommit.yml
databricks_export/: README.md
databricks_export/sst/: README.md  databricks.yml
databricks_export/sst/resources/: pdp_inference_pipeline.job.yml  poc_github_sourced_pdp_inference_pipeline.job.yml
databricks_export/sst/src/: data_ingestion_pipeline_task.py  data_processing_pipeline_task.py  data_validation_pipeline_task.py  model_inference_pipeline_task.py  synthetic_data_generation_pipeline_task.py
devtools/: lib.sh  run.sh
mlruns/0/: meta.yaml
notebooks/pdp/: 01-data-assessment-eda-TEMPLATE.py  02-prepare-modeling-dataset-TEMPLATE.py  03-train-evaluate-model-TEMPLATE.py  04-make-explain-predictions-TEMPLATE.py  config-TEMPLATE.toml  config-v2-TEMPLATE.toml
notebooks/pdp/automated-pipeline/: data_ingestion_pipeline_task.ipynb  data_processing_pipeline_task.ipynb  data_validation_task.ipynb  model_inference_pipeline_task.ipynb  synthetic_data_generation_pipeline_task.ipynb
pipelines/custom/institution_id/: 02-train-model-TEMPLATE.py  03-make-predictions-TEMPLATE.py  04-register-model-create-card-TEMPLATE.py  05-inference-validation-TEMPLATE.py  README.md  config-TEMPLATE.toml
pipelines/exuni1/: 01-data-assessment.py  02-prepare-modeling-dataset.py  03-train-evaluate-model.py  04-make-explain-predictions.py
pipelines/exuni2/: 01-data-assessment.py  02-prepare-modeling-dataset.py
pipelines/exuni3/: 01-data-assessment-eda.py  02-prepare-modeling-dataset-KSU.py  02-prepare-modeling-dataset.py
pipelines/inference/pdp_inference/: README.md  error-messages.json
pipelines/inference/sst_pdp_inference/: README.md  poc_github_sourced_pdp_inference_pipeline.yaml
pipelines/institution_id/: 00-data-assessment-TEMPLATE.py  01-preprocess-data-TEMPLATE.py  02-train-model-TEMPLATE.py  03-make-predictions-TEMPLATE.py  04-register-model-create-card-TEMPLATE.ipynb  04-register-model-create-card-TEMPLATE.py  config-TEMPLATE.toml  preprocess.py  schemas.py
pipelines/msud/: 01_MSUDataAssessment.py  02_AssessStudentPopulation.py  03_ModelingDataset.py  config.toml  schemas.py
pipelines/pdp/institution_id/: 00-data-assessment-TEMPLATE.py  01-preprocess-data-TEMPLATE.py  02-train-model-TEMPLATE.py  03-make-predictions-TEMPLATE.py  04-register-model-create-card-TEMPLATE.py  config-CREDITS_EARNED_TEMPLATE.toml  config-GRADUATION_TEMPLATE.toml  config-RETENTION_TEMPLATE.toml  config-TEMPLATE.toml  schemas.py
pipelines/tasks/approve_output/: approve_output_task.py
pipelines/tasks/data_validation/: README.md  data_validation_task.py  test_data_validation.py
pipelines/tasks/delete_data/: delete_data_task.py
pipelines/tasks/inference_output_publish/: inference_output_publish_task.py
scripts/: generate_synthetic_pdp_datasets.py  set_bucket_cors_policy.py  zogotech_processing.py
scripts/configs/: course_data_cleaning_config.json  course_df_data_cleaning_recommendations.json  semester_data_cleaning_config.json  semester_df_data_cleaning_recommendations.json  student_data_cleaning_config.json  student_df_data_cleaning_recommendations.json
self_tests/utils/: test_example.py
src/student_success_tool/: eda.py  emails.py  gcsutils.py  utils.py
src/webapp/: .env.example  Dockerfile  README.md  __init__.py  authn.py  authn_test.py  cloud_run_functions.py  commands to set up venv on cloudtop  config.py  database.py  databricks.py  gcsdbutils.py  gcsdbutils_test.py  gcsutil.py  index.html  main.py  main_test.py  sftp.py  test_helper.py  upload.py  utilities.py  utilities_test.py  validation.py  validation_test.py
src/worker/: .env.example  Dockerfile  README.md  __init__.py  authn.py  authn_test.py  config.py  index.html  main.py  main_test.py  utilities.py  utilities_test.py
synthetic-data/: Example Output File [shareable].csv  synthetic_dataset.py
synthetic-data/Custom_School_1/: synthetic_dataset.csv  synthetic_dataset.py  synthetic_script.py
synthetic-data/pdp/: INSTXYZ_COURSE_LEVEL_AR_DEID.csv  INSTXYZ_STUDENT_SEMESTER_AR_DEIDENTIFIED.csv
synthetic-data/sample-platform/: DataKind_School1_CourseFile.csv  DataKind_School1_SemesterFile.csv
synthetic-data/zogotech/: DataKind_School1_CourseFile.csv  DataKind_School1_SemesterFile.csv  DataKind_School1_StudentFile.csv  synthetic_data_generator.py
terraform/: .terraform.lock.hcl  README.md  main.tf  variables.tf
tests/: mock_strategy_map.json  test_eda.py  test_utils.py
tests/assets/: Untitled Notebook 2025-06-30 17_05_53.ipynb  test_feature_tables.py  test_features_table.py
tests/checkpoints/: test_pdp.py
tests/configs/: test_custom.py  test_pdp.py
tests/dataio/: test_assets.py  test_config.py
tests/fixtures/: project_config.toml  raw_pdp_cohort_data.csv  raw_pdp_cohort_data_ys.csv  raw_pdp_course_data.csv  raw_pdp_course_data_invalid.csv
tests/ingestion_validation/: test_validation.py
tests/institution_onboarding/: institution_onboarding.ipynb  template_enrollment_model_toml_file.toml  template_toml_file.toml
tests/modeling/: test_bias_detection.py  test_evaluation.py  test_evaluation_h2o.py  test_feature_selection.py  test_imputation.py  test_imputation_h2o.py  test_inference.py  test_inference_h2o.py  test_inference_helpers.py  test_modeling_helpers.py  test_registration.py  test_training.py  test_training_h2o.py  test_utils.py  test_utils_h2o.py
tests/pedro_tests/: Untitled Notebook 2025-02-13 17_29_01.ipynb
tests/preprocessing/: test_pdp.py
tests/reporting/: test_model_card.py
(+375 files in other folders)
