[project]
name = "student-success-tool"
version = "0.1.0"
description = "School-agnostic lib for implementing Student Success Tool workflows."
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "databricks-connect~=13.3",
    "ipywidgets~=8.1.2",
    "matplotlib~=3.9.0",
    "missingno~=0.5.0",
    "mlflow~=2.11",
    "pandas~=2.2.0",
    "pandera~=0.20.0",
    "pillow~=9.3.0",
    "pyarrow~=14.0",
    "pyyaml~=6.0",
    "scikit-learn~=1.1.1",
    "seaborn~=0.13.2",
    "statsmodels~=0.14.1",
    "textwrap3~=0.9.2",
    # "shap~=0.45.0"  # does not install!
]

[project.urls]
Repository = "https://github.com/datakind/student-success-tool"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ipykernel~=6.29.4",
    "jupyterlab~=4.2.0",
    "mypy~=1.11.0",
    "pytest~=8.3.0",
    "ruff~=0.6.3",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
extend-exclude = [
    "*.ipynb", # TODO: don't exclude ipynbs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"] # TODO: add "D1" and "D2" for docstring checks
ignore = [
    "E402", # module-level import not at top of cell
    "E501", # line-length violation
    "E711", # None comparison (common in pandas code)
    "E712", # True/False comparison (common in pandas code)
]

[tool.ruff.lint.per-file-ignores]
# ignore import violations in all init files
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
lines-after-imports = 1

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "--verbose"
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
files = ["src"]
disallow_incomplete_defs = true
warn_return_any = true
warn_unused_ignores = true
