[project]
name = "student-success-tool"
version = "0.3.7"
description = "School-agnostic lib for implementing Student Success Tool workflows."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "databricks-connect~=16.0",
    "databricks-sdk~=0.38.0",
    "faker>=20.1",
    "google-cloud-storage~=2.17",
    "ipywidgets~=8.1",
    "matplotlib~=3.7",
    "missingno~=0.5",
    "mlflow~=2.13",
    "numpy~=1.26",
    "pandas~=2.0",
    "pandera~=0.23.0",
    "pyarrow~=16.0",
    "pydantic~=2.10",
    "pyyaml~=6.0",
    "scikit-learn~=1.4",
    "seaborn~=0.13",
    "statsmodels~=0.14",
    "shap~=0.46.0",
    "tomli~=2.0; python_version<'3.11'",
    "weasyprint~=60.2",
    "pydyf~=0.8.0",
    "markdown~=3.5",
    "types-markdown~=3.8",
]

[project.urls]
Repository = "https://github.com/datakind/student-success-tool"

[dependency-groups]
dev = [
    "ipykernel~=6.29",
    "jupyterlab~=4.2",
    "mypy~=1.11",
    "pytest~=8.3",
    "ruff~=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"
extend-exclude = [
    "*.ipynb", # TODO: don't exclude ipynbs
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"] # TODO: add "D1" and "D2" for docstring checks
ignore = [
    "E402", # module-level import not at top of cell
    "E501", # line-length violation
    "E711", # None comparison (common in pandas code)
    "E712", # True/False comparison (common in pandas code)
]

[tool.ruff.lint.per-file-ignores]
# ignore import violations in all init files
"__init__.py" = ["E402", "F401"]

[tool.ruff.lint.isort]
lines-after-imports = 1

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["--verbose", "--import-mode=importlib"]
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]

[tool.mypy]
files = ["src"]
python_version = "3.10"
pretty = true
allow_redefinition = true
warn_return_any = true
disallow_incomplete_defs = true
ignore_missing_imports = true
follow_imports = "silent"
# in case of irreconcilable differences, consider telling mypy to ignore all errors
# ignore_errors = true
